--- a/resources/js/views/login/css/main.css
+++ b/resources/js/views/login/css/main.css
@@ -217,7 +217,17 @@ iframe {
   font-size: 30px;
   color: #fff;
   text-transform: uppercase;
-  line-height: 1.2;
+  line-height: 2.0;
+  text-align: center;
+}
+
+.login100-form-title-2 {
+  font-family: Poppins-Bold;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+  line-height: 2.0;
+  padding-bottom: 12px;
   text-align: center;
 }
 
